--- a/dino.glade
+++ b/dino.glade
@@ -1086,7 +1086,7 @@
 		  <property name="max_length">0</property>
 		  <property name="text" translatable="yes"></property>
 		  <property name="has_frame">True</property>
-		  <property name="invisible_char" translatable="yes">*</property>
+		  <property name="invisible_char">*</property>
 		  <property name="activates_default">False</property>
 		</widget>
 		<packing>
@@ -1107,7 +1107,7 @@
 		  <property name="max_length">0</property>
 		  <property name="text" translatable="yes"></property>
 		  <property name="has_frame">True</property>
-		  <property name="invisible_char" translatable="yes">*</property>
+		  <property name="invisible_char">*</property>
 		  <property name="activates_default">False</property>
 		</widget>
 		<packing>
@@ -1229,7 +1229,7 @@
 </widget>
 
 <widget class="GtkDialog" id="dlg_about">
-  <property name="border_width">5</property>
+  <property name="border_width">2</property>
   <property name="title" translatable="yes">About Dino</property>
   <property name="type">GTK_WINDOW_TOPLEVEL</property>
   <property name="window_position">GTK_WIN_POS_NONE</property>
@@ -1247,7 +1247,7 @@
     <widget class="GtkVBox" id="dialog-vbox1">
       <property name="visible">True</property>
       <property name="homogeneous">False</property>
-      <property name="spacing">0</property>
+      <property name="spacing">5</property>
 
       <child internal-child="action_area">
 	<widget class="GtkHButtonBox" id="dialog-action_area1">
@@ -1276,10 +1276,26 @@
       </child>
 
       <child>
+	<widget class="GtkImage" id="image1">
+	  <property name="visible">True</property>
+	  <property name="pixbuf">path9064.png</property>
+	  <property name="xalign">0.5</property>
+	  <property name="yalign">0.5</property>
+	  <property name="xpad">0</property>
+	  <property name="ypad">0</property>
+	</widget>
+	<packing>
+	  <property name="padding">0</property>
+	  <property name="expand">True</property>
+	  <property name="fill">True</property>
+	</packing>
+      </child>
+
+      <child>
 	<widget class="GtkLabel" id="label9">
 	  <property name="visible">True</property>
 	  <property name="label" translatable="yes">&lt;b&gt;&lt;big&gt;Dino&lt;/big&gt;&lt;/b&gt;
-A pattern-based MIDI sequencer for GNU/Linux
+A pattern based MIDI sequencer for GNU/Linux
 © Lars Luthman 2005
 
 This program is free software; you can redistribute it and/or
@@ -1289,7 +1305,7 @@ modify it under the terms of the GNU General Public License as published by the 
 	  <property name="justify">GTK_JUSTIFY_CENTER</property>
 	  <property name="wrap">True</property>
 	  <property name="selectable">False</property>
-	  <property name="xalign">0.5</property>
+	  <property name="xalign">0.490000009537</property>
 	  <property name="yalign">0.5</property>
 	  <property name="xpad">0</property>
 	  <property name="ypad">0</property>
@@ -1478,7 +1494,7 @@ modify it under the terms of the GNU General Public License as published by the 
 	      <property name="max_length">0</property>
 	      <property name="text" translatable="yes"></property>
 	      <property name="has_frame">True</property>
-	      <property name="invisible_char" translatable="yes">*</property>
+	      <property name="invisible_char">*</property>
 	      <property name="activates_default">False</property>
 	    </widget>
 	    <packing>
@@ -1713,7 +1729,7 @@ modify it under the terms of the GNU General Public License as published by the 
 	      <property name="max_length">0</property>
 	      <property name="text" translatable="yes"></property>
 	      <property name="has_frame">True</property>
-	      <property name="invisible_char" translatable="yes">*</property>
+	      <property name="invisible_char">*</property>
 	      <property name="activates_default">False</property>
 	    </widget>
 	    <packing>
