--- a/dino.glade
+++ b/dino.glade
@@ -1537,6 +1537,7 @@
 </widget>
 
 <widget class="GtkDialog" id="dlg_track_properties">
+  <property name="visible">False</property>
   <property name="title" translatable="yes">Track properties</property>
   <property name="type">GTK_WINDOW_TOPLEVEL</property>
   <property name="window_position">GTK_WIN_POS_NONE</property>
